# cc-genealogy

./: .gitignore  LICENSE  README.md  TODO.md  analysis_coordinator.sh  analysis_pipeline.sh  calculate_dataset_divergence.py  cc_collection_analysis.ipynb  cc_counting.py  cc_counting.sh  cleanup.py  codex_analysis_slurm.sh  commoncrawl_processing.py  compare_counts.py  concat.py  consolidate_databases.sh  dag.ipynb  data_export.sh  derived_dataset_pipeline.py  derived_dataset_pipeline_aria.py  derived_dataset_pipeline_dolma.py  derived_dataset_pipeline_lfs.py  dl_and_process.py  dolma_preprocessing.sh  domain_query_c4_en.sh  domain_query_culturax.sh  domain_query_dclm.sh  domain_query_dolma copy.sh  domain_query_dolma.sh  domain_query_falcon.sh  domain_query_fineweb.sh  domain_query_fineweb_edu.sh  domain_query_madlad_clean.sh  domain_query_redpajama.sh  domain_query_zyda.sh  hf_collection_slurm.sh  hf_cultura.sh  hf_dclm-dedup.sh  hf_dclm.sh  hf_zyda.sh  (+67 more)
analysis/: c4_pct.sql  case_study_test.ipynb  cc_counting.py  cc_genalogy_tree.ipynb  chart.ipynb  check_datasets_for_urls.ipynb  codex_analyses.ipynb  codex_analyses.py  commoncrawl_processing.py  consolidated_data_eda.ipynb  dataset_dag.ipynb  dataset_readmes.py  domain_frac_comparison.sql  generate_dependency_mapping.py  get_hf_datasets.ipynb  minimal_local_dataset.py  most_prevalent_domain_frac.sql  most_prevalent_domains.sql  nyt_breakdown.ipynb  nyt_frac_c4.sql  nyt_frac_cc.sql  nyt_path_analysis.ipynb  nyt_urls_c4.sql  pipeline_sketch.ipynb  stratified-sample.ipynb  tally_cc_sizes.ipynb  url_labeling.ipynb
(+74 files in other folders)
