[project]
name = "cc-genealogy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.6.2",
    "dask[distributed]>=2025.1.0",
    "datasets>=3.2.0",
    "duckdb>=1.1.3",
    "huggingface-hub>=0.27.1",
    "ipykernel>=6.29.5",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "scikit-learn>=1.6.1",
    "tldextract>=5.1.3",
    "tqdm>=4.67.1",
]
